--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
+//        classpath "org.jetbrains.kotlin:kotlin-allopen:1.3.21"
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.4.RELEASE")
     }
 }
@@ -15,6 +16,7 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+//apply plugin: "kotlin-spring" // https://kotlinlang.org/docs/reference/compiler-plugins.html#spring-support
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -25,7 +27,7 @@ targetCompatibility = 11
 
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 
@@ -37,9 +39,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-undertow")
+    implementation("org.springframework.boot:spring-boot-starter-data-jdbc")
+    implementation("mysql:mysql-connector-java")
     //developmentOnly("org.springframework.boot:spring-boot-devtools")
     runtimeOnly("org.springframework.boot:spring-boot-devtools")
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('junit:junit')
 }
 
 compileKotlin {
